Fixed UI overlap (#595)

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -3892,6 +3892,7 @@ canvas#webgl {
 
 	ul#editingOptions {
 		position: absolute;
+		z-index: 1;
 		top: 46px;
 		left: $mainPanelNormalWid;
 
